--- a/css/logo_svg.css
+++ b/css/logo_svg.css
@@ -149,9 +149,6 @@
 
 @media screen and (min-width: 768px) {
   #logo_wrapper {
-    padding-left: 0rem;
-    border-bottom: 1px solid #888;
-    width: inherit;
-    height: inherit;  
+    padding: 0;
   }
 }
