--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,7 +1,6 @@
 
 .navbar {
   height: 100vh;
-
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
@@ -169,7 +168,7 @@
     position: relative;
     opacity: 0.95;
     background-color: #282828;
-    width: 100%;
+    width: fit-content;
     height: 10vh;
     box-shadow: 1px 1px 4px rgba(0,0,0,0.25);   
   }
@@ -191,7 +190,7 @@
     position: relative;
     top: 0;
     height: 100%;
-    width: 100vw;
+    width: 80vw;
     display: flex;
     justify-content: center;
     align-items: center;
