--- a/main.css
+++ b/main.css
@@ -22,9 +22,10 @@ header {
   position: sticky;
   top: 0;
   left: 0;
-  padding: 0.25rem auto;
+  padding: 0.25rem 0;
   width: 100%;
-  height: 10vh;
+  height: 100px;
+  background-color: var(--color-black);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -455,6 +456,8 @@ footer > h3:hover > a::before {
   }
 
   header {
+    background-color: rgba(0, 0, 0, 0.25);
+    height: fit-content;
     padding: 1rem 2rem;
   }
   nav {
